--- a/projetos/templates/projetos/certificacao_falconi.html
+++ b/projetos/templates/projetos/certificacao_falconi.html
@@ -37,7 +37,6 @@
             min-width:100% !important;
         }
     }
-        
 
   </style>
 
@@ -191,11 +190,8 @@
 
     {% include "impressora.html" %}
     
-    {% with file_name="falconi" %}
-        {% include "save_image.html" %}
-    {% endwith %}
-
-
+    {% include "save_image.html" with file_name="falconi" %}
+    
     <div id="tudo">
 
     <span class="titulo">Análise dos Conceitos das Certificações Falconi</span>
@@ -207,8 +203,8 @@
         <div class="container">
 
             <div class="row mt-4 justify-content-center text-center graficos">
-                <div class="col-md-6 col-xs-6 mb-5 grafico"><canvas id="pie-falconi"></canvas></div>
-                <div class="col-md-6 col-xs-6 mb-5 grafico"><canvas style="min-height:300px" id="bar-falconi"></canvas></div>
+                <div class="col-md-6 col-xs-6 mb-5 grafico"><canvas style="margin-left: auto; margin-right: auto;" id="pie-falconi"></canvas></div>
+                <div class="col-md-6 col-xs-6 mb-5 grafico"><canvas style="margin-left: auto; margin-right: auto; min-height:300px;" id="bar-falconi"></canvas></div>
             </div>
             
             <script>
@@ -407,16 +403,38 @@
 
         </div>
         
-        
+
+        <br>
         {% if projetos_selecionados %}
+            <div><ul>
+                <li>Total de projetos realizados no semestre: {{selecionados|add:nao_selecionados}}</li>
+                <li>Total de projetos selecionados para certificação Falconi: {{selecionados}}</li>
+                <li>Total de projetos que obtiveram certificação <u>Destaque Projeto Final de Engenharia FALCONI-INSPER</u>: <span id="n_destaque"></span></li>
+                <li>Total de projetos que obtiveram certificação <u>Excelência Projeto Final de Engenharia FALCONI-INSPER</u>: <span id="n_excelencia"></span></li>
+            </ul></div><br><br>
+        {% else %}
+            <div>
+                Não há projetos selecionados para certificação Falconi nesta edição.
+            </div>
+        {% endif %}
+
+        {% if projetos_selecionados %}
+
             <p style="page-break-before: always"></p>
-            <h4>Projetos Selecionados:<br></h4>
+            <h4 style="margin-bottom: 18px;">Projetos Selecionados:</h4>
+            
+            <script>
+                var n_destaque = 0;
+                var n_excelencia = 0;
+            </script>
+
             {% for projeto, avaliadores_falconi in bancas %}
+                <div style="margin-left: 6px;">
                 {% if not forloop.first %}  
                     <p style="page-break-before: always"></p>
                 {% endif %}
                 <script>
-                    var falconi = new Banca(); 
+                    var falconi = new Banca();
                 </script>
 
                 {% if avaliadores_falconi %}
@@ -434,26 +452,25 @@
                     {% endfor %}
                     </h6>
 
-
-  Grupo:
-  <ul>
-  {% for alocacao in projeto.alocacao_set.all %}
-    <li>
-    <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
-      <p>
-        {{alocacao.aluno.user.get_full_name}} 
-        {% comment %} &lt;{{alocacao.aluno.user.email}}&gt;  {% endcomment %}
-        [{{ alocacao.aluno.curso2 }}]
-        {% for opcao in alocacao.aluno.opcao_set.all %}
-          {% if opcao.projeto == projeto %}
-            (opção #{{opcao.prioridade}})
-          {% endif %}
-        {% endfor %}
-      </p>
-    </a>
-    </li>
-  {% endfor %}
-  </ul>
+                    Grupo:
+                    <ul>
+                    {% for alocacao in projeto.alocacao_set.all %}
+                        <li>
+                        <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
+                        <p>
+                            {{alocacao.aluno.user.get_full_name}} 
+                            {% comment %} &lt;{{alocacao.aluno.user.email}}&gt;  {% endcomment %}
+                            [{{ alocacao.aluno.curso2 }}]
+                            {% for opcao in alocacao.aluno.opcao_set.all %}
+                            {% if opcao.projeto == projeto %}
+                                (opção #{{opcao.prioridade}})
+                            {% endif %}
+                            {% endfor %}
+                        </p>
+                        </a>
+                        </li>
+                    {% endfor %}
+                    </ul>
 
                     <table>    
                     {% for avaliador, objs in avaliadores_falconi.items %}
@@ -474,11 +491,11 @@
                                 </span></li>
                                 
                                 <script>
-                                objetivo_tmp = new Objetivo();
-                                objetivo_tmp.titulo = "{{objetivo.titulo}}"
-                                //objetivo_tmp.rubrica = "{{objetivos|get_rubrica:objetivo.id|get_texto_nota:conceito.nota}}"
-                                falconi.add_objetivo(objetivo_tmp)
-                                falconi.dict[objetivo_tmp.titulo].soma_nota({{conceito.nota}})
+                                    objetivo_tmp = new Objetivo();
+                                    objetivo_tmp.titulo = "{{objetivo.titulo}}"
+                                    //objetivo_tmp.rubrica = "{{objetivos|get_rubrica:objetivo.id|get_texto_nota:conceito.nota}}"
+                                    falconi.add_objetivo(objetivo_tmp)
+                                    falconi.dict[objetivo_tmp.titulo].soma_nota({{conceito.nota}})
                                 </script>
 
                             {% endif %}{% endfor %}
@@ -516,10 +533,12 @@
                                 $("#falconi_{{projeto.id}}").css("background-color","#ffd700b0");
                                 $("#med_falconi_situacao_{{projeto.id}}").css("background-color","#ffd700b0");
                                 $("#med_falconi_situacao_{{projeto.id}}").html("Excelência Projeto Final de Engenharia FALCONI-INSPER");
+                                n_excelencia += 1;
                             } else if(media>=6) {
                                 $("#falconi_{{projeto.id}}").css("background-color","#c0c0f0b0");
                                 $("#med_falconi_situacao_{{projeto.id}}").css("background-color","#c0c0f0b0");
                                 $("#med_falconi_situacao_{{projeto.id}}").html("Destaque Projeto Final de Engenharia FALCONI-INSPER");
+                                n_destaque += 1;
                             } else {
                                 $("#med_falconi_situacao_{{projeto.id}}").html("Não obteve certificado");
                             }
@@ -530,9 +549,19 @@
 
                     </table>
                 {% endif %}
+                </div>
+                <br>
+                <hr class="esconder">
+                <br>
                 
-                <br><br>
             {% endfor %}
+
+            
+            <script>
+                $("#n_destaque").html(n_destaque);
+                $("#n_excelencia").html(n_excelencia);
+            </script>
+            
         {% endif %}
 
     </div>
