listagem de bancas

--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -41,6 +41,7 @@
     <ul>
         <li><a href="{% url 'propostas_lista' %}">Propostas</a></li>
         <li><a href="{% url 'projetos_lista' %}">Projetos</a></li>
+        <li><a href="{% url 'bancas_lista' %}">Bancas</a></li>
     </ul>
 
     <hr>
