--- a/operacional/templates/operacional/avisos_listar.html
+++ b/operacional/templates/operacional/avisos_listar.html
@@ -32,6 +32,11 @@
       }
     }
 
+    th {
+      text-align:center;
+      border: 1px solid black;
+    }
+
   </style>
 
 {% endblock %}
@@ -41,7 +46,7 @@
   <span class="titulo">Avisos</span>
 
   <label for="filter">Filtro:</label>
-  <select id="cxi" class="filter" data-tableId="projetos">
+  <select id="filter" class="filter" data-tableId="projetos">
     <option value="todos" {% if filtro == "todos" %}selected="selected"{% endif %}>todos</option>
     <option value="Co" {% if filtro == "Co" %}selected="selected"{% endif %}>Coordenação</option>
     <option value="Cm" {% if filtro == "Cm" %}selected="selected"{% endif %}>Comitê PFE</option>
@@ -66,117 +71,101 @@
             Og: Contatos nas Organizacoes.
           </small>
         </caption>
-        <thead style="background-color:#CCCCCC;">
-          <tr>
-            <th scope="col" style="text-align:center; border: 1px solid black;">
-              &#10003;
-            </th>
-            <th scope="col" style="text-align:center; border: 1px solid black;">
-              Data
-            </th>
-            <th scope="col" style="text-align:center; border: 1px solid black;">
-              Público
-            </th>
-            <th scope="col" style="text-align:center; border: 1px solid black;">
-              Título
-            </th>
+        <thead>
+          <tr style="background-color:#CCCCCC;">
+            <th scope="col" style="width: 1em;">&#10003;</th>
+            <th scope="col">Data</th>
+            <th scope="col">Público</th>
+            <th scope="col">Título</th>
           </tr>
         </thead>
         <tbody>
         {% for a in avisos %}
 
-        {% if a.class == "Evento" %}
-        <tr style="vertical-align: middle;" class="linha" data-type="
-              {% comment %} {% if a.tipo_de_evento < 100 %}Al{% else %}Co{% endif %} {% endcomment %}
-              Co Ev">
-          <th  scope="row">
-          </th>
-          <td style="vertical-align: middle;" class="{% if a.data < hoje %}text-success{% else %}text-info{% endif %}">
-              <span class="data_longa">{{a.data}}</span>
-              <span class="data_curta">{{a.data|date:"d/m/y"}}</span>
-          </td>
-          <td style="vertical-align: middle;" class="{% if a.data < hoje %}text-success{% else %}text-info{% endif %}">
-            {% comment %} {% if a.tipo_de_evento < 100 %}
-              <span data-toggle="tooltip" data-html="true" animation="true" title="Todos Estudantes">Al</span>
-            {% else %} {% endcomment %}
-              <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
-            {% comment %} {% endif %} {% endcomment %}
-          </td>
-          <td style="vertical-align: middle; background-color:{{a.color}}">
-            {{a.titulo}}
-          </td>
-        </tr>
+          {% if a.class == "Evento" %}
+            <tr style="vertical-align: middle;" class="linha" data-type="Co Ev">
+              <th scope="row"></th>
+              <td style="vertical-align: middle;" class="{% if a.evento.get_data < hoje %}text-success{% else %}text-info{% endif %}">
+                <span class="data_longa">{{a.evento.get_data}}</span><span class="data_curta">{{a.evento.get_data|date:"d/m/y"}}</span>
+              </td>
+              <td style="vertical-align: middle;" class="{% if a.evento.get_data < hoje %}text-success{% else %}text-info{% endif %}">
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
+              </td>
+              <td style="vertical-align: middle; background-color:{{a.evento.get_color}}">
+                {{a.evento.get_title}}
+              </td>
+            </tr>
 
-        {% comment %} Caso um aviso {% endcomment %}
-        {% else %}
-          <tr 
-          class="linha
-            {% if a.data %}
-              {% if a.data < hoje %}text-success{% else %}text-info{% endif %}
-            {% else %}
-              text-muted
-            {% endif %}
-          "
-          data-type="
-            {% if a.coordenacao %}Co{% endif %}
-            {% if a.comite_pfe %}Cm{% endif %}
-            {% if a.todos_alunos %}Es{% endif %}
-            {% if a.todos_orientadores %}Or{% endif %}
-            {% if a.contatos_nas_organizacoes %}Og{% endif %}
-          " >
-
-          <th style="vertical-align: middle; text-align:center;" scope="row">
-            {% if a.data %}
-              <input class="aviso" type="checkbox" id="aviso{{a.id}}" name="aviso{{a.id}}" value="{{a.data|date:"d/m/Y"}}" 
-              {% comment %} {% if a.realizado %}checked{% endif %} {% endcomment %}
-              {% if a.realizado %}checked{% endif %}
-              {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
-              >
-            {% endif %}
-          </th>
-          
-          <td style="vertical-align: middle;" data-toggle="tooltip" data-html="true" animation="true" title="
-              {% if a.tipo_de_evento %}
-                {{a.evento}} {%if a.delta >= 0 %}+ {{a.delta}}{%else%}- {% widthratio a.delta 1 -1 %}{%endif%}
+          {% comment %} Caso um aviso {% endcomment %}
+          {% else %}
+            <tr 
+            class="linha
+              {% if a.data %}
+                {% if a.data < hoje %}text-success{% else %}text-info{% endif %}
               {% else %}
-                delta={{a.delta}}
+                text-muted
               {% endif %}
-            ">
-            <label style="line-height: 0px;" for="aviso{{a.id}}">
-              {% if a.data%}
-                <span class="data_longa">{{a.data}}</span>
-                <span class="data_curta">{{a.data|date:"d/m/y"}}</span>
-              {% else %}
-                Sem evento no semestre
+            "
+            data-type="
+              {% if a.coordenacao %}Co{% endif %}
+              {% if a.comite_pfe %}Cm{% endif %}
+              {% if a.todos_alunos %}Es{% endif %}
+              {% if a.todos_orientadores %}Or{% endif %}
+              {% if a.contatos_nas_organizacoes %}Og{% endif %}
+            " >
+
+            <th style="vertical-align: middle; text-align:center;" scope="row">
+              {% if a.data %}
+                {% with instante=a.data|date:"md"%}
+                  <input class="aviso" type="checkbox" id="{{forloop.counter}}" name="aviso{{a.id}}" value="{{instante}}" 
+                    {% if instante in a.aviso.datas_realizado %}checked{% endif %}
+                    {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
+                {% endwith %}
               {% endif %}
-            </label>
-          </td>
+            </th>
+            
+            <td style="vertical-align: middle;" data-toggle="tooltip" data-html="true" animation="true" title="
+                {% if a.aviso.tipo_de_evento %}
+                  {{a.aviso.evento}} {%if a.aviso.delta >= 0 %}+ {{a.aviso.delta}}{%else%}- {% widthratio a.aviso.delta 1 -1 %}{%endif%}
+                {% else %}
+                  delta={{a.aviso.delta}}
+                {% endif %}
+              ">
+              <label style="line-height: 0px;" for="{{forloop.counter}}">
+                {% if a.data%}
+                  <span class="data_longa">{{a.data}}</span>
+                  <span class="data_curta">{{a.data|date:"d/m/y"}}</span>
+                {% else %}
+                  Sem evento no semestre
+                {% endif %}
+              </label>
+            </td>
 
-          <td style="vertical-align: middle;">
-            {% if a.coordenacao %}
-              <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
-            {% endif %}
-            {% if a.comite_pfe %}
-              <span data-toggle="tooltip" data-html="true" animation="true" title="Comite do PFE">Cm</span>
-            {% endif %}
-            {% if a.todos_alunos %}
-              <span data-toggle="tooltip" data-html="true" animation="true" title="Estudantes">Es</span>
-            {% endif %}
-            {% if a.todos_orientadores %}
-              <span data-toggle="tooltip" data-html="true" animation="true" title="Orientadores">Or</span>
-            {% endif %}
-            {% if a.contatos_nas_organizacoes %}
-              <span data-toggle="tooltip" data-html="true" animation="true" title="Contatos nas Organizacoes">Og</span>
-            {% endif %}
-          </td>
+            <td style="vertical-align: middle;">
+              {% if a.aviso.coordenacao %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Coordenação">Co</span>
+              {% endif %}
+              {% if a.aviso.comite_pfe %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Comite do PFE">Cm</span>
+              {% endif %}
+              {% if a.aviso.todos_alunos %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Estudantes">Es</span>
+              {% endif %}
+              {% if a.aviso.todos_orientadores %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Orientadores">Or</span>
+              {% endif %}
+              {% if a.aviso.contatos_nas_organizacoes %}
+                <span data-toggle="tooltip" data-html="true" animation="true" title="Contatos nas Organizacoes">Og</span>
+              {% endif %}
+            </td>
 
-          <td style="vertical-align: middle;">
-            {% if a.id %}<a {% if not a.data %}class="text-muted"{% endif %} href="{% url 'edita_aviso' a.id %}">{% endif %}
-              {{a.titulo}}
-            {% if a.id %}</a>{% endif %}
-          </td>
-        </tr>
-        {% endif %}
+            <td style="vertical-align: middle;">
+              {% if a.id %}<a {% if not a.data %}class="text-muted"{% endif %} href="{% url 'edita_aviso' a.id %}">{% endif %}
+                {{a.aviso.titulo}}
+              {% if a.id %}</a>{% endif %}
+            </td>
+          </tr>
+          {% endif %}
 
         {% endfor %}
         </tbody>
@@ -196,12 +185,12 @@
   <script type="text/javascript">
 
     function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
-      var filterValue = $('.filter').val();
-      var row = $('.linha'); 
+      var filterValue = $(".filter").val();
+      var row = $(".linha"); 
       row.hide();
 
       row.each(function(i, el) {
-        if( filterValue == "todos" | $(el).attr('data-type').indexOf(filterValue) >= 0 ) {
+        if( filterValue == "todos" | $(el).attr("data-type").indexOf(filterValue) >= 0 ) {
             $(el).show();
         }
       });
@@ -221,18 +210,18 @@
   <script>
     $(".aviso").change(function () {
 
-      var aviso = $(this).prop('name');
-      var checked = $(this).prop('checked');
+      var aviso = $(this).prop("name");
+      var checked = $(this).prop("checked");
       var value = $(this).val();
 
       $.ajax({
         url: '{% url "validate_aviso" %}',
         data: {
-          'aviso': aviso,
-          'checked': checked,
-          'value': value,
+          "aviso": aviso,
+          "checked": checked,
+          "value": value,
         },
-        dataType: 'json',
+        dataType: "json",
         success: function (data) {
           if (data.atualizado) {
             //console.log("Valor atualizado.");
