--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -135,6 +135,13 @@ table, th, td {
   display: block;
   padding-bottom: 0.25em;
   padding-top: 10px;
+  line-height: 1.0;
+}
+
+.titulo i {
+  display: block;
+  font-size: 0.5em;
+  margin: 0.5em 0px 0px 1.2em;
 }
 
 /* Feito com https://www.bestcssbuttongenerator.com/ */
