--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -169,7 +169,11 @@
 
         <p class="estudantes pess_proj"><b>Estudantes:</b>
             {% with alocacoes=projeto.alocacao_set.all %}{% if alocacoes %}
-              <span class="emails esconder"><a href="mailto:{% for alocacao in projeto.alocacao_set.all %}&lt;{{alocacao.aluno.user.email}}&gt;{% if not forloop.last %},{% endif %}{% endfor %}?subject=PFE%20Insper%20-%20Projeto:%20{{projeto}}&body=Caros%20{% for alocacao in projeto.alocacao_set.all %}%20{{alocacao.aluno.user.first_name}},{% endfor %}%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenador_email}}%20(coordenação%20PFE)" target="_blank">&#x2709;</a></span>
+              <span class="emails esconder">
+                <a href="mailto:{% for alocacao in alocacoes %}{{alocacao.aluno.user.email}}{% if not forloop.last %},{% endif %}{% endfor %}?subject=PFE%20Insper%20-%20Projeto:%20{{projeto}}&body=Caro{% if alocacoes|length > 1 %}s{% endif %}%20{% for alocacao in alocacoes %}{% if not forloop.first %}{% if forloop.last %}%20e{% else %},{% endif %}%20{% endif %}{{alocacao.aluno.user.get_full_name}}{% endfor %},%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenador_email}}%20(coordenação%20PFE)" target="_blank">
+                  &#x2709;
+                </a>
+              </span>
             {% endif %}{% endwith %}
           </p>
         <ol class="estudantes" style="margin-bottom:5px;">
@@ -221,7 +225,7 @@
 
           {% if conexoes %}
           <span class="emails esconder"><a 
-            href="mailto:{% for conexao in conexoes %}&lt;{{conexao.parceiro.user.email}}&gt;{% if not forloop.last %},{% endif %}{% endfor %}?subject=PFE%20Insper%20-%20Projeto:%20{{projeto}}&body=Caros%20{% for conexao in conexoes %}%20{{conexao.parceiro.user.first_name}},{% endfor %}%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenador_email}}%20(coordenação%20PFE)" target="_blank">&#x2709;</a></span>
+            href="mailto:{% for conexao in conexoes %}{{conexao.parceiro.user.email}}{% if not forloop.last %},{% endif %}{% endfor %}?subject=PFE%20Insper%20-%20Projeto:%20{{projeto}}&body=Caro{% if conexoes|length > 1 %}s{% endif %}%20{% for conexao in conexoes %}{% if not forloop.first %}{% if forloop.last %}%20e{% else %},{% endif %}%20{% endif %}{{conexao.parceiro.user.get_full_name}}{% endfor %},%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenador_email}}%20(coordenação%20PFE)" target="_blank">&#x2709;</a></span>
           {% endif %}
           </p>
 
