--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -7,9 +7,7 @@
 {% comment %} Seletor da edição da pesquisa {% endcomment %}
 {% if edicoes %}
   <style>
-    .separador {
-      margin-right: 16px;
-    }
+    .separador {margin-right: 16px;}
 
     @media only screen and (max-width: 520px) {
       .to_hide {
