--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -23,6 +23,11 @@
       width:auto;
       float: right;
     }
+
+    ul, ol {
+      padding-left: 1.4em;
+    }
+
   </style>
 
 {% endblock %}
@@ -187,34 +192,38 @@
   {% if organizacao.proposta_set.all %}
     <hr>
     <h3>Propostas <small><a href="{% url 'proposta_submissao' %}?organizacao={{organizacao.id}}">&#10133;</a></small></h3>
-    {% for proposta in organizacao.proposta_set.all %}
-      <a href="{% url 'proposta_completa' proposta.id %}"> 
-        <li>
-          {% if proposta.fechada %}
-            <u>
-          {% endif %}
-          {{proposta.titulo}} ({{proposta.ano}}.{{proposta.semestre}})
-          {% if proposta.fechada %}
-            </u>
-          {% endif %}
-        </li>
-      </a>
-    {% endfor %}
+    <ol>
+      {% for proposta in organizacao.proposta_set.all %}
+        <a href="{% url 'proposta_completa' proposta.id %}"> 
+          <li>
+            {% if proposta.fechada %}
+              <u>
+            {% endif %}
+            {{proposta.titulo}} ({{proposta.ano}}.{{proposta.semestre}})
+            {% if proposta.fechada %}
+              </u>
+            {% endif %}
+          </li>
+        </a>
+      {% endfor %}
+    </ol>
   {% endif %}
 
   {% if organizacao.projeto_set.all %}
     <hr>
     <h3>Projetos</h3>
-    {% for projeto in organizacao.projeto_set.all %}
-      {% if projeto.alocacao_set.count %}
-        <a href="{% url 'projeto_completo' projeto.id %}">
-          <li>
-            {{projeto.get_titulo}} ({{projeto.ano}}.{{projeto.semestre}})
-            {% include "tipo_projeto.html" %}<br>
-          </li>
-        </a>
-      {% endif %}
-    {% endfor %}
+    <ol>
+      {% for projeto in organizacao.projeto_set.all %}
+        {% if projeto.alocacao_set.count %}
+          <a href="{% url 'projeto_completo' projeto.id %}">
+            <li>
+              {{projeto.get_titulo}} ({{projeto.ano}}.{{projeto.semestre}})
+              {% include "tipo_projeto.html" %}<br>
+            </li>
+          </a>
+        {% endif %}
+      {% endfor %}
+    </ol>
   {% endif %}
   
   <hr>
@@ -228,7 +237,6 @@
   </small></h3>
   
   <ul id="lista_anotacoes" style="padding-left: 18px;">
-    
     {% for anotacao in organizacao.anotacao_set.all|dictsortreversed:"momento" %}
       <li>
         <a
@@ -241,7 +249,7 @@
         </a>
       </li>
     {% endfor %}
-    </ul>
+  </ul>
   
   <span id="sem_anotacoes" {% if organizacao.anotacao_set.all %}style="visibility: hidden;"{% endif %}>
     Ainda não existem anotações para essa organização.
